# bestest

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs
examples/java/massive/: config.toml
examples/java/massive/submissions/: README.md  chaotic_013_Main.java  perfect_09_Main.java
examples/java/various/: config.toml
examples/java/various/submissions/: README.md  alice_1_01_Main.java  bob_1_02_Main.java  carol_1_03_Main.java  dave_1_04_Main.java  erin_1_05_Main.java
src/: checker.rs  config.rs  executable.rs  lib.rs  main.rs  report.rs  test.rs  unpacker.rs
src/gui/: app.rs  mod.rs
src/lang/: java.rs  mod.rs  runner.rs
ui/: main.slint
