[package]
name = "bestest"
version = "0.2.1"
edition = "2024"
license="MIT OR Apache-2.0"
description="The Bestest Efficient Speedy Tester."
repository="https://github.com/shuntia/bestest"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.49", features = ["derive"] }
console = "0.16.1"
env_logger = "0.11.8"
imara-diff = "0.2.0"
indicatif = { version = "0.18.0", features = ["improved_unicode"] }
indicatif-log-bridge = "0.2.3"
itertools = "0.14.0"
log = "0.4.28"
nix = { version = "0.30.1", features = ["process", "signal"] }
once_cell = "1.21.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
slint = {version="1.13.1",optional=true}
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
walkdir = "2.5.0"
zip = "6.0.0"

[build-dependencies]
slint-build ={version= "1.13.1",optional=true}

[features]
gui=["slint", "slint-build"]
nerdfont=[]
